Fix button color on iOS

--- a/apps/web/styles/index.css
+++ b/apps/web/styles/index.css
@@ -36,6 +36,7 @@ a {
 button {
   font: inherit;
   margin: 0;
+  color: currentColor;
 }
 
 * {
